--- a/app/index.html
+++ b/app/index.html
@@ -21,21 +21,36 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">recipeApp</h3>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="header">
+            <ul class="nav nav-pills pull-right">
+              <li class="active"><a ng-href="#">Home</a></li>
+              <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#">Contact</a></li>
+            </ul>
+            <h3 class="text-muted">recipeApp</h3>
+          </div>
+        </div>
       </div>
+    </div>
 
       <div ng-view=""></div>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
+<!--       <div class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+              <ul class="nav nav-pills pull-right">
+                <li class="active"><a ng-href="#">Home</a></li>
+                <li><a ng-href="#/about">About</a></li>
+                <li><a ng-href="#">Contact</a></li>
+              </ul>
+              <h3 class="text-muted">recipeApp</h3>
+            </div>
+          </div>
+        </div>
+      </div> -->
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
